<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Team_a"
                    android:layout_gravity="center"
                    android:textSize="@dimen/Team_score"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_gravity="center"
                    android:textSize="@dimen/UpdateTextView"
                    android:layout_marginTop="@dimen/team_margintop"
                    android:id="@+id/TeamAPointsText"/>
                <Button
                    android:text="@string/goal"
                   style="@style/GreenButton"
                    android:onClick="TeamApoints"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/linewidth"
                android:layout_height="match_parent"
                android:background="@color/line">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Team_V"
                    android:layout_gravity="center"
                    android:textSize="@dimen/Team_score"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_gravity="center"
                    android:textSize="@dimen/UpdateTextView"
                    android:layout_marginTop="@dimen/team_margintop"
                    android:id="@+id/TeamBPointsText"
                    />
                <Button
                    android:id="@+id/button"
                    style="@style/GreenButton"
                    android:onClick="TeamBPoints"
                    android:text="@string/goal" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/linewidth"
            android:background="@color/line">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_a_foul"
                    android:textSize="@dimen/Team_Foul"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginTop="@dimen/UpdateTextViewMarginTop"
                    android:layout_gravity="center"
                    android:textSize="@dimen/UpdateTextView"
                    android:id="@+id/TeamAFoulsText" />
                <Button
                    style="@style/GreenButton"
                    android:text="@string/foul"
                    android:onClick="TeamAFouls"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/linewidth"
                android:layout_height="match_parent"
                android:background="@color/line">
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_b_foul"
                    android:textSize="@dimen/Team_Foul"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginTop="@dimen/UpdateTextViewMarginTop"
                    android:layout_gravity="center"
                    android:textSize="@dimen/UpdateTextView"
                    android:id="@+id/TeamBFoulsText" />
                <Button
                    style="@style/GreenButton"
                    android:text="@string/foul"
                    android:onClick="TeamBFouls"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Goal"
            android:id="@+id/react"
            android:textSize="108sp"
            android:padding="16dp"
            android:textAllCaps="true"
            android:visibility="invisible"
            android:textAlignment="center"/>
        <Button
            android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        style="@style/GreenButton"
        android:text="@string/reset"
        android:id="@+id/resetButton"
        android:textAllCaps="false"
        android:onClick="reset"
        />
    </LinearLayout>
</RelativeLayout>
    </ScrollView>